objects/ASI_CRM_Record_Transfer__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CompetitorContractRe__c</fullName>
        <label>Remark: Competitor Contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CompetitorContractSel__c</fullName>
        <label>Competitor Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CompetitorContractStat__c</fullName>
        <label>Status: Competitor Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_ContractRe__c</fullName>
        <label>Remark: Contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ContractSel__c</fullName>
        <label>Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_ContractStat__c</fullName>
        <label>Status: Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CustomerRe__c</fullName>
        <label>Remark: Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CustomerSel__c</fullName>
        <label>Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CustomerStat__c</fullName>
        <label>Status: Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Record Transfers</relationshipLabel>
        <relationshipName>ASI_CRM_Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Error_Remarks__c</fullName>
        <label>Error Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_EventEvaluationRe__c</fullName>
        <label>Remark: Event Evaluation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_EventEvaluationSel__c</fullName>
        <label>Event Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_EventEvaluationStat__c</fullName>
        <label>Status: Event Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exchange_Order__c</fullName>
        <label>Exchange Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Free_Goods_POSM__c</fullName>
        <label>Free Goods / POSM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_From_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_FromUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ImageOutletRequestRe__c</fullName>
        <label>Remark: Image Outlet Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ImageOutletRequestSel__c</fullName>
        <label>Image Outlet Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_ImageOutletRequestStat__c</fullName>
        <label>Status: Image Outlet Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_OutletSel__c</fullName>
        <label>Outlet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Please select correct type of Outlet</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI_CRM_HK_RT</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (HK)</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI_CRM_HK_RT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Record Transfers</relationshipLabel>
        <relationshipName>Record_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PaymentRequestRe__c</fullName>
        <label>Remark: Payment Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PaymentRequestSel__c</fullName>
        <label>Payment Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PaymentRequestStat__c</fullName>
        <label>Status: Payment Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pre_Approval_Form__c</fullName>
        <label>Pre-Approval Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pre_contractRe__c</fullName>
        <label>Remark: Pre-contract</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pre_contractSel__c</fullName>
        <label>Pre-contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pre_contractStat__c</fullName>
        <label>Status: Pre-contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PriceAndDiscountRe__c</fullName>
        <label>Remark: Price and Discount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PriceAndDiscountSel__c</fullName>
        <label>Price and Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PriceAndDiscountStat__c</fullName>
        <label>Status: Price and Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSPRe__c</fullName>
        <label>Remark: RSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSPSel__c</fullName>
        <label>RSP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSPStat__c</fullName>
        <label>Status: RSP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark_Exchange_Order__c</fullName>
        <label>Remark: Exchange Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark_Free_Goods_POSM__c</fullName>
        <label>Remark: Free Goods / POSM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark_Outlet__c</fullName>
        <label>Remark: Outlet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark_Pre_Approval_Form__c</fullName>
        <label>Remark: Pre-Approval Form</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark_Purchase_Order__c</fullName>
        <label>Remark: Purchase Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark_Sales_Order__c</fullName>
        <label>Remark: Sales Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark_Visitation_Plan__c</fullName>
        <label>Remark: Visitation Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SalesOrderRequestRe__c</fullName>
        <label>Remark: Sales Order Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SalesOrderRequestSel__c</fullName>
        <label>Sales Order Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SalesOrderRequestStat__c</fullName>
        <label>Status: Sales Order Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Order__c</fullName>
        <label>Sales Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Exchange_Order__c</fullName>
        <label>Status: Exchange Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Free_Goods_POSM__c</fullName>
        <label>Status: Free Goods / POSM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Outlet__c</fullName>
        <label>Status: Outlet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Pre_Approval_Form__c</fullName>
        <label>Status: Pre-Approval Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Purchase_Order__c</fullName>
        <label>Status: Purchase Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Sales_Order__c</fullName>
        <label>Status: Sales Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status_Visitation_Plan__c</fullName>
        <label>Status: Visitation Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                    <default>true</default>
                    <label>Queue</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Transfer_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_TransferTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visitation_Plan__c</fullName>
        <label>Visitation Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Record Transfer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_Transfer_To__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ASI_CRM_From_User__c</columns>
        <columns>ASI_CRM_OutletSel__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Complete</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_From_User__c</columns>
        <columns>ASI_CRM_Transfer_To__c</columns>
        <columns>ASI_CRM_OutletSel__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Complete</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Queue</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Effective_Date__c</columns>
        <columns>ASI_CRM_From_User__c</columns>
        <columns>ASI_CRM_Transfer_To__c</columns>
        <columns>ASI_CRM_OutletSel__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Queue</value>
        </filters>
        <label>All Queue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000000}</displayFormat>
        <label>Record Transfer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Transfers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_RT</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_RT</fullName>
        <active>true</active>
        <label>ASI_CRM_HK_RT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_EitherUserCustomer</fullName>
        <active>true</active>
        <description>Input either &apos;From User&apos; OR &apos;Customer&apos;</description>
        <errorConditionFormula>IF((RecordType.DeveloperName=&apos;ASI_CRM_CN_RT&apos;&amp;&amp;(ASI_CRM_From_User__c==null&amp;&amp;ASI_CRM_Customer__c==null)||(ASI_CRM_From_User__c!=null&amp;&amp;ASI_CRM_Customer__c!=null)) || (RecordType.DeveloperName=&apos;ASI_CRM_HK_RT&apos;&amp;&amp;(ASI_CRM_From_User__c==null&amp;&amp;ASI_CRM_Outlet__c==null)||(ASI_CRM_From_User__c!=null&amp;&amp;ASI_CRM_Outlet__c!=null)),True, False)</errorConditionFormula>
        <errorMessage>Please input either User OR Customer</errorMessage>
    </validationRules>
</CustomObject>